--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <!-- Contact Info One - Address -->
                         <div class="contact-card">
                             <figure class="contact-card-icon">
-                                <img src="./images/gifs/icons8-address.gif" alt="Office location icon">
+                                <img src="Images/gifs/icons8-address.gif" alt="Office location icon">
                             </figure>
                             <div class="contact-card-content">
                                 <p class="contact-card-title">Our Address</p>
@@ -64,7 +64,7 @@
                         <!-- Contact Info Two - Email -->
                         <div class="contact-card">
                             <figure class="contact-card-icon">
-                                <img src="./images/gifs/icons8-email.gif" alt="Email icon">
+                                <img src="Images/gifs/icons8-email.gif" alt="Email icon">
                             </figure>
                             <div class="contact-card-content">
                                 <p class="contact-card-title">Email Us</p>
@@ -77,7 +77,7 @@
                         <!-- Contact Info Three - Phone -->
                         <div class="contact-card">
                             <figure class="contact-card-icon">
-                                <img src="./Images/gifs/icons8-ringing.gif" alt="Phone icon">
+                                <img src="Images/gifs/icons8-ringing.gif" alt="Phone icon">
                             </figure>
                             <div class="contact-card-content">
                                 <p class="contact-card-title">Call Us</p>
