--- a/index.html
+++ b/index.html
@@ -269,34 +269,34 @@
                 <img src="/Images/Icons/icons8-clickup-100.png" alt="ClickUp" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-google-100.png" alt="Google" />
+                <img src="Images/Icons/icons8-google-100.png" alt="Google" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-google-cloud-100.png" alt="Google Cloud" />
+                <img src="Images/Icons/icons8-google-cloud-100.png" alt="Google Cloud" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-hubspot-100.png" alt="Hubspot" />
+                <img src="Images/Icons/icons8-hubspot-100.png" alt="Hubspot" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-slack-logo-100.png" alt="Slack" />
+                <img src="Images/Icons/icons8-slack-logo-100.png" alt="Slack" />
               </figure>
             </div>
             <!-- Duplicate for seamless loop -->
             <div class="marquee-content" aria-hidden="true">
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-clickup-100.png" alt="Clickup" />
+                <img src="Images/Icons/icons8-clickup-100.png" alt="Clickup" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-google-100.png" alt="google" />
+                <img src="Images/Icons/icons8-google-100.png" alt="google" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-google-cloud-100.png" alt="google cloud" />
+                <img src="Images/Icons/icons8-google-cloud-100.png" alt="google cloud" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-hubspot-100.png" alt="Hubspot" />
+                <img src="Images/Icons/icons8-hubspot-100.png" alt="Hubspot" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/Icons/icons8-slack-logo-100.png" alt="Slack" />
+                <img src="Images/Icons/icons8-slack-logo-100.png" alt="Slack" />
               </figure>
             </div>
           </div>
@@ -307,31 +307,31 @@
           <div class="marquee-track">
             <div class="marquee-content">
               <figure class="logo-box">
-                <img src="./images/icons/icons8-magento-100.png" alt="Magento" />
+                <img src="Images/icons/icons8-magento-100.png" alt="Magento" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-notion-100.png" alt="Notion" />
+                <img src="Images/icons/icons8-notion-100.png" alt="Notion" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-shopify-100.png" alt="Shopify" />
+                <img src="Images/icons/icons8-shopify-100.png" alt="Shopify" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
             </div>
             <!-- Duplicate for seamless loop -->
             <div class="marquee-content" aria-hidden="true">
               <figure class="logo-box">
-                <img src="./images/icons/icons8-magento-100.png" alt="Magento" />
+                <img src="Images/icons/icons8-magento-100.png" alt="Magento" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-notion-100.png" alt="Notion" />
+                <img src="Images/icons/icons8-notion-100.png" alt="Notion" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-shopify-100.png" alt="Shopify" />
+                <img src="Images/icons/icons8-shopify-100.png" alt="Shopify" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
             </div>
           </div>
@@ -342,37 +342,37 @@
           <div class="marquee-track">
             <div class="marquee-content">
               <figure class="logo-box">
-                <img src="./images/icons/icons8-wordpress-100.png" alt="wordpress" />
+                <img src="Images/icons/icons8-wordpress-100.png" alt="wordpress" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-zoho-analytics-100.png" alt="Zoho" />
+                <img src="Images/icons/icons8-zoho-analytics-100.png" alt="Zoho" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-google-shopping-100.png" alt="google shopping" />
+                <img src="Images/icons/icons8-google-shopping-100.png" alt="google shopping" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-clickup-100.png" alt="Clickup" />
+                <img src="Images/icons/icons8-clickup-100.png" alt="Clickup" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/Maropost Icon.png" alt="mrapost" />
+                <img src="Images/icons/Maropost Icon.png" alt="mrapost" />
               </figure>
             </div>
             <!-- Duplicate for seamless loop -->
             <div class="marquee-content" aria-hidden="true">
               <figure class="logo-box">
-                <img src="./images/icons/hotjar.png" alt="hotjar" />
+                <img src="Images/icons/hotjar.png" alt="hotjar" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-wordpress-100.png" alt="google shopping" />
+                <img src="Images/icons/icons8-wordpress-100.png" alt="google shopping" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-zoho-analytics-100.png" alt="zoho" />
+                <img src="Images/icons/icons8-zoho-analytics-100.png" alt="zoho" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
               <figure class="logo-box">
-                <img src="./images/icons/icons8-google-cloud-100.png" alt="google cloud" />
+                <img src="Images/icons/icons8-google-cloud-100.png" alt="google cloud" />
               </figure>
             </div>
           </div>
@@ -407,7 +407,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/tepugo-1.png" alt="Tepugo Product" class="product-logo-full" />
+                <img src="Images/tepugo-1.png" alt="Tepugo Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -425,7 +425,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/cen.jpg" alt="CENEXIO Product" class="product-logo-full" />
+                <img src="Images/cen.jpg" alt="CENEXIO Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -443,7 +443,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/by.png" alt="buyyn Product" class="product-logo-full" />
+                <img src="Images/by.png" alt="buyyn Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -461,7 +461,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/cc.png" alt="Cimplycloud Product" class="product-logo-full" />
+                <img src="Images/cc.png" alt="Cimplycloud Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -485,7 +485,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/tepugo-1.png" alt="Tepugo Product" class="product-logo-full" />
+                <img src="Images/tepugo-1.png" alt="Tepugo Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -503,7 +503,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/cen.jpg" alt="CENEXIO Product" class="product-logo-full" />
+                <img src="Images/cen.jpg" alt="CENEXIO Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -521,7 +521,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/by.png" alt="buyyn Product" class="product-logo-full" />
+                <img src="Images/by.png" alt="buyyn Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
@@ -539,7 +539,7 @@
             <div class="card-flipper">
               <!-- Front: Logo -->
               <div class="card-front card-back-product">
-                <img src="./images/cc.png" alt="Cimplycloud Product" class="product-logo-full" />
+                <img src="Images/cc.png" alt="Cimplycloud Product" class="product-logo-full" />
               </div>
               <!-- Back: Description -->
               <div class="card-back">
