fix: correct image paths case sensitivity for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -307,31 +307,31 @@
           <div class="marquee-track">
             <div class="marquee-content">
               <figure class="logo-box">
-                <img src="Images/icons/icons8-magento-100.png" alt="Magento" />
+                <img src="Images/Icons/icons8-magento-100.png" alt="Magento" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-notion-100.png" alt="Notion" />
+                <img src="Images/Icons/icons8-notion-100.png" alt="Notion" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-shopify-100.png" alt="Shopify" />
+                <img src="Images/Icons/icons8-shopify-100.png" alt="Shopify" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/Icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
             </div>
             <!-- Duplicate for seamless loop -->
             <div class="marquee-content" aria-hidden="true">
               <figure class="logo-box">
-                <img src="Images/icons/icons8-magento-100.png" alt="Magento" />
+                <img src="Images/Icons/icons8-magento-100.png" alt="Magento" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-notion-100.png" alt="Notion" />
+                <img src="Images/Icons/icons8-notion-100.png" alt="Notion" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-shopify-100.png" alt="Shopify" />
+                <img src="Images/Icons/icons8-shopify-100.png" alt="Shopify" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/Icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
             </div>
           </div>
@@ -342,37 +342,37 @@
           <div class="marquee-track">
             <div class="marquee-content">
               <figure class="logo-box">
-                <img src="Images/icons/icons8-wordpress-100.png" alt="wordpress" />
+                <img src="Images/Icons/icons8-wordpress-100.png" alt="wordpress" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-zoho-analytics-100.png" alt="Zoho" />
+                <img src="Images/Icons/icons8-zoho-analytics-100.png" alt="Zoho" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-google-shopping-100.png" alt="google shopping" />
+                <img src="Images/Icons/icons8-google-shopping-100.png" alt="google shopping" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-clickup-100.png" alt="Clickup" />
+                <img src="Images/Icons/icons8-clickup-100.png" alt="Clickup" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/Maropost Icon.png" alt="mrapost" />
+                <img src="Images/Icons/Maropost Icon.png" alt="mrapost" />
               </figure>
             </div>
             <!-- Duplicate for seamless loop -->
             <div class="marquee-content" aria-hidden="true">
               <figure class="logo-box">
-                <img src="Images/icons/hotjar.png" alt="hotjar" />
+                <img src="Images/Icons/hotjar.png" alt="hotjar" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-wordpress-100.png" alt="google shopping" />
+                <img src="Images/Icons/icons8-wordpress-100.png" alt="google shopping" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-zoho-analytics-100.png" alt="zoho" />
+                <img src="Images/Icons/icons8-zoho-analytics-100.png" alt="zoho" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-uipath-100.png" alt="UIpath" />
+                <img src="Images/Icons/icons8-uipath-100.png" alt="UIpath" />
               </figure>
               <figure class="logo-box">
-                <img src="Images/icons/icons8-google-cloud-100.png" alt="google cloud" />
+                <img src="Images/Icons/icons8-google-cloud-100.png" alt="google cloud" />
               </figure>
             </div>
           </div>
