--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Floating Navigation -->
     <header class="header">
-        <nav class="nav-container">
+       <nav class="nav-container">
             <a href="index.html" class="logo">
             <div class="logo-icon">
                 <img src="Images/logo.png">
@@ -17,19 +17,19 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Explore <span class="dropdown-arrow">▼</span></a>
+                    <a href="https://brandio.io/envato/iosoon/html/soon10.html" class="nav-link">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Engage <span class="dropdown-arrow">▼</span></a>
+                    <a href="https://brandio.io/envato/iosoon/html/soon10.html" class="nav-link">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Insights <span class="dropdown-arrow">▼</span></a>
+                    <a href="https://brandio.io/envato/iosoon/html/soon10.html" class="nav-link">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact us</a>
+                    <a href="index.html#products" class="nav-link">Products</a>
                 </li>
             </ul>
-            <button class="btn-primary">Get started</button>
+            <a href="contact.html" class="btn-primary">Get started</a>
         </nav>
     </header>
 
