--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="https://brandio.io/envato/iosoon/html/soon10.html" class="nav-link">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Products</a>
+                    <a href="#products" class="nav-link">Products</a>
                 </li>
             </ul>
             <a href="contact.html" class="btn-primary">Get started</a>
@@ -386,7 +386,7 @@
 </section>
 
 <!-- Reviews Section - PRODUCTS CAROUSEL -->
-<section class="reviews-section">
+<section class="reviews-section" id="products">
   <div class="reviews-container">
     <!-- Section Header -->
     <div class="reviews-header">
